plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id "com.thinkimi.gradle.MybatisGenerator" version "2.4"
	id "org.openapi.generator" version "7.2.0"
}

group = 'net.javaguides'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'io.swagger.core.v3:swagger-annotations:2.2.8'
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.openapitools:jackson-databind-nullable:0.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation "org.testcontainers:mysql:1.20.1"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

bootRun {
	jvmArgs "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.test {
	// Groovyでのテスト時、Sharing のWARNINGエラーを消去する
	jvmArgs "-Xshare:off";
}

tasks.withType(Test) {
	// Dynamic loading のWARNINGエラーを消去する
	jvmArgs "-XX:+EnableDynamicAgentLoading";
}